working with icons

--- a/HMS/Areas/Dashboard/Views/AccomodationTypes/Index.cshtml
+++ b/HMS/Areas/Dashboard/Views/AccomodationTypes/Index.cshtml
@@ -14,9 +14,9 @@
        <div class="input-group">
            <input type="text" class="form-control" placeholder="Search..." />
            <div class="input-group-append">
-               <button type="button" class="btn btn-outline-primary">Search</button>
-               <button type="button" class="btn btn-outline-secondary">Reset</button>
-               <button id="createButton" type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#actionModel">Create</button>
+               <button type="button" class="btn btn-outline-primary"><i class="fas fa-search mr-1"></i> Search</button>
+               <button type="button" class="btn btn-outline-secondary"><i class="fas fa-redo-alt mr-1"></i> Reset</button>
+               <button id="createButton" type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#actionModel"><i class="fas fa-plus-square mr-1"></i>Create</button>
            </div>
        </div>
     </div>
