--- a/HMS/Areas/Dashboard/Views/AccomodationTypes/_Action.cshtml
+++ b/HMS/Areas/Dashboard/Views/AccomodationTypes/_Action.cshtml
@@ -27,8 +27,8 @@
 
         </div>
         <div class="modal-footer">
-            <button id="actionButton" type="button" class="btn btn-primary">Save changes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button id="actionButton" type="button" class="btn btn-outline-primary"><i class="fas fa-save mr-1"></i> Save changes</button>
+            <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"><i class="fas fa-window-close mr-1"></i> Close</button>
         </div>
     </div>
 }
