--- a/HMS/Areas/Dashboard/Views/AccomodationTypes/_Listing.cshtml
+++ b/HMS/Areas/Dashboard/Views/AccomodationTypes/_Listing.cshtml
@@ -21,7 +21,7 @@
                         <td>@accomodationType.Data.Description</td>
                         <td>
                             <button data-href='@Url.Action("Action", "AccomodationTypes", new { id = accomodationType.Data.ID })' type="button" class=" data-btn btn btn-outline-primary btn-sm" data-toggle="modal" data-target="#actionModel"><i class="fas fa-edit m-1"></i>Edit</button>
-                            <button type="button" class="btn btn-outline-danger btn-sm"><i class="fas fa-trash-alt m-1"></i> Delete</button>
+                            <button data-href='@Url.Action("Delete", "AccomodationTypes", new { id = accomodationType.Data.ID })' type="button" class="data-btn btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#actionModel"><i class="fas fa-trash-alt m-1"></i> Delete</button>
                         </td>
                     </tr>
                 }
